# agentstack-scraper

./: .gitignore  Makefile
zillow_scraper/: README.md  pyproject.toml
zillow_scraper/src/: crew.py  main.py
zillow_scraper/src/config/: agents.yaml  tasks.yaml
