[tool.poetry]
name = "zillow_scraper"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.2"}

[project.scripts]
zillow_scraper = "zillow_scraper.main:run"
run_crew = "zillow_scraper.main:run"
train = "zillow_scraper.main:train"
replay = "zillow_scraper.main:replay"
test = "zillow_scraper.main:test"